fix: solve all sonarqube warnings